image should attach to root folder

--- a/templates/zinnia/_entry_detail_base.html
+++ b/templates/zinnia/_entry_detail_base.html
@@ -59,7 +59,7 @@
         {% if continue_reading %}
         <a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="bookmark">
           {% endif %}
-          <img src="{{ object.image.url }}" alt="{{ object.title }}" class="img-thumbnail img-responsive" />
+          <img src="/{{ object.image.url }}" alt="{{ object.title }}" class="img-thumbnail img-responsive" />
           {% if continue_reading %}
         </a>
         {% endif %}
